2004-02-13  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S
	(__pthread_cond_timedwait): Get internal lock in case timeout has
	passed before the futex syscall.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S: Likewise.

2004-01-20  Ulrich Drepper  <drepper@redhat.com>

	* allocatestack.c: Pretty printing.

	* sysdeps/pthread/createthread.c (create_thread): Don't add
	CLONE_DETACHED bit if it is not necessary.

2004-01-16  Ulrich Drepper  <drepper@redhat.com>

	* pthread_getattr_np.c: Include ldsodefs.h.

2004-01-16  Richard Henderson  <rth@redhat.com>

	* allocatestack.c: Don't declare __libc_stack_end.
	* init.c (__pthread_initialize_minimal_internal): Likewise.
	* pthread_getattr_np.c (pthread_getattr_np): Likewise.

2004-01-15  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/tls.h (tcbhead_t): Add private.
	(TLS_INIT_TCB_SIZE, TLS_INIT_TCB_ALIGN, TLS_TCB_SIZE,
	TLS_PRE_TCB_SIZE, TLS_TCB_ALIGN, INSTALL_DTV, INSTALL_NEW_DTV,
	GET_DTV, THREAD_DTV, THREAD_SELF, DB_THREAD_SELF): Match ia64.
	(TLS_TCB_OFFSET, THREAD_ID, NO_TLS_OFFSET): Remove.
	(THREAD_GETMEM, THREAD_GETMEM_NC): Simplify.
	(THREAD_SETMEM, THREAD_SETMEM_NC): Likewise.
	* sysdeps/unix/sysv/linux/alpha/createthread.c (TLS_VALUE): Match ia64.

2004-01-14  Ulrich Drepper  <drepper@redhat.com>

	* init.c (pthread_funtions): Make array const.

2004-01-13  Ulrich Drepper  <drepper@redhat.com>

	* allocatestack.c (__make_stacks_executable): Change interface.
	Check parameters.  Pass parameter on to libc counterpart.
	* pthreadP.h: Change declaration.

2004-01-13  Richard Henderson  <rth@redhat.com>

	* pthread_attr_setstack.c (__old_pthread_attr_setstack): Use
	prototype form.
	* pthread_attr_setstacksize.c (__old_pthread_attr_setstacksize):
	Likewise.

	* sysdeps/alpha/Makefile: New file.
	* sysdeps/alpha/tcb-offsets.sym: New file.
	* sysdeps/unix/sysv/linux/alpha/sysdep-cancel.h (SINGLE_THREAD_P):